--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
+            <img src="img/images.jfif" alt="">
             <p>Um dia desses,um garoto que acabou de completar 10 anos começa a sua jornada no mundo de pokemon! Seu nome é RED! E esta preste a pegar seu primeiro pokemon! e para isso precisa levantar cedo para não perder seu pokemon!</p>
             <button class="btn-proximo" data-proximo="1">Continuar dormindo</button>
             <button class="btn-proximo" data-proximo="2">Ir falar direto com Professor Carvalho</button>
@@ -34,9 +34,8 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <img src="img/7b80a04936cc933ebd4979b1e990f5cbbc186d55_00.jpg" alt="imagem voltando para casa e desitindo da aventura">
+            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta ce teria se tornado aquilo que almejava ser.</p>
         </div>
 
         <div class="passo" id="passo-5">
