--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <button class="btn-proximo" data-proximo="6">um tipo planta BULBASAUR</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Ele conseguiu chegar na casa do professor carvalho,mas ele chegou atrazado então so tinha uma unica escolha de pokemon Squirtle!E de brinde o professor Carvalho lhe dá um
+                luck egg(faz o seu pokemon evoluir mais rapidamente)então você luta e conquista ginasios e seu pokemon evolui para Wartortle!
+                </p>
+            <button class="btn-proximo" data-proximo="7">continuar sua jornada!
+            </button>
         </div>
 
         <div class="passo" id="passo-4">
@@ -39,25 +41,26 @@
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Com os eu incrivel treinamento o seu Charmander evolui para Charmeleon e aprende o lança chamas muito rapidamente depoiu de passar do seu terceiro ginasio!</p>
+            <button class="btn-proximo" data-proximo="7">Continuar seguindo para o proximo ginasio!</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>com o seu bulbassaur a todo vapor,ganhando uma batalha atras da outra ele finalmente evolui para Ivysaur,conseguindo sua segunda insignia de ginasio</p>
+            <button class="btn-proximo" data-proximo="8">continuar batalhando e seguindo o seu caminho!</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>continuando sua jornada seu pokemon finalmente evolui para o seu estagio final,mas depois de um tempo escuta um alarme ecoar e um helicoptero com ha palavra Rocket voando para longe de lá o que fazer agora?</p>
+            <button class="btn-proximo" data-proximo="9">Seguir para o ultimo ginasio</button>
+            <button class="btn-proximo" data-proximo="10">Seguir o helicoptero</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>seguindo o seu caminho vc encontra um grupo de ladrões roubando pokemons,que se auto pronuncia equipe Rocket,você tenta seguilos mas os perde de vista 
+                Mas algo lê dis que não vai ser a ultima vez que vai encontra-los
+            </p>
+            <button class="btn-proximo" data-proximo="7">Seguir viajem para o proximo ginasio!</button>
         </div>
 
         <div class="passo" id="passo-9">
@@ -67,9 +70,10 @@
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>seguindo o helicoptero você consegue entrar em um lugar onde os pokemons estavam presos,eles estavam com uma rede os prendendo
+                então você vai lá e corta a rede com um canivete que estava em seu bolso e foge o mais rapido possivel
+            </p>
+            <button class="btn-proximo" data-proximo="12">Retornar e ir para o ultimo ginasio</button>
         </div>
 
         <div class="passo" id="passo-11">
@@ -85,5 +89,3 @@
         </div>
     </main>
     <script src="script.js"></script>
-</body>
-</html>
