--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Continuando sua jornada você vai para o proximo ginasio e percebe que o lider de lá é o lider da equipe Rocket
+                Tendo isso em mente você o enfrenta para ganhar a nova e ultima insignia  para a grandiosa liga pokemon
+                Você consegue passar da elite dos quatro,mas logo em seguida vê o seu rival e tem que o enfrenta-lo
+            </p>
+            <button class="btn-proximo" data-proximo="11">enfrentar o rival</button>
         </div>
 
         <div class="passo" id="passo-10">
@@ -78,8 +80,7 @@
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>depois de muito lutar o seu pokemon inicial consegue ganhar a batalha e você cê consagra o grande campeão da liga de KANTO!</p>
         </div>
 
         <div class="passo" id="passo-12">
